<resources>
    <string name="app_name">SMARTRM</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="login">Đăng nhập</string>
    <string name="domain_online">Ma nha hang</string>
    <string name="domain_offline">192.168.1.1</string>
    <string name="user_name">Tên đăng nhập</string>
    <string name="password">mật khẩu</string>

    <string name="order">ORDER</string>
    <string name="map">SƠ ĐỒ</string>
    <string name="folow">THEO DÕI</string>
    <string name="title_activity_main">SMARTRM</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Thông báo</string>
    <string name="nav_order">order</string>
    <string name="nav_map">Sơ đồ</string>
    <string name="nav_more">Thêm</string>
    <string name="nav_notifications">Thông báo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_search_table_num">Tìm kiếm theo số bàn</string>
    <string name="network_error">Không có kết nối internet. Vui lòng bật 3G/4G hoặc WIFI trước.</string>
    <string name="cancel">hủy</string>
    <string name="take_monney">thu tiền</string>
    <string name="done">Xong</string>
    <string name="on_table_load_error">Có lỗi xảy ra xin thử lại sau</string>
    <string name="on_floor_load_error">Có lỗi xảy ra xin thử lại sau</string>
    <string name="about">Thông tin sản phẩm</string>
    <string name="logout">Đăng xuất</string>
    <string name="share">Chia sẻ với bạn bè</string>
    <string name="feedback">Góp ý với nhà phát triển</string>
    <string name="bill_manage">Quản lý hóa đơn</string>
    <string name="settings">Thiết đặt</string>
    <string name="menu">Thực đơn</string>
    <string name="somthing_wrong">Có lỗi xảy ra xin thử lại sau</string>
    <string name="save_order_success">Lưu order thành công</string>
    <string name="title_activity_bill">Hóa đơn</string>
    <string name="title_activity_order">Chọn món ăn</string>
    <string name="notification_empty">Không có thông báo</string>
    <string name="title_order">Bán hàng</string>
    <string name="title_map">Sơ đồ</string>
    <string name="title_more">SMARTRM - Bán hàng</string>
    <string name="hint_search_dishes">Tìm kiếm món ăn theo tên, mã SKU</string>
    <string name="save">cất</string>
    <string name="take_money">Thu tiền</string>
    <string name="pop_edit_order">Kiểm order</string>
    <string name="pop_merge_order">Hợp nhất order</string>
    <string name="pop_split_order">Chia order</string>
    <string name="pop_cancel_order">Hủy order</string>
    <string name="total">Tổng tiền</string>
    <string name="title_add_dishes">Thêm món</string>
    <string name="dishes_type">Loại đồ ăn</string>
    <string name="all">Tất cả</string>
    <string name="floor">Chọn tầng</string>
    <string name="input_table_num">Nhập số bàn</string>
    <string name="table_num">Số bàn</string>
    <string name="input_people_count">Nhập số người</string>
    <string name="people_count">Số người</string>
    <string name="login_fail">Đăng nhập thất bại xin thử lại sau</string>
</resources>
